# qwen-mlx

./: .gitignore  Cargo.toml  README.md
docs/: WRITEUP.md
src/: cache.rs  hf.rs  lib.rs  sample.rs
src/models/: compiled_ops.rs  gdn.rs  metal_gdn.rs  mod.rs  qwen3_5.rs  weights.rs
src/scheduler/: executor.rs  mlx_executor.rs  mod.rs  scheduler.rs  sequence.rs
