[package]
name = "qwen-mlx"
version = "0.1.0"
edition = "2021"
description = "Rust MLX inference engine for Qwen3.5-35B-A3B on Apple Silicon — 112 tok/s single-user, 200+ tok/s multi-user"
license = "MIT"
repository = "https://github.com/emanueleDiVizio/qwen-mlx"

[dependencies]
mlx-rs = "0.25"
mlx-sys = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokenizers = "0.21"
half = "2"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "tokio", "rustls-tls"] }
